change to 205 and SSPC

--- a/web/markdown-content/tk205.md
+++ b/web/markdown-content/tk205.md
@@ -1,1 +1,1 @@
-A software toolkit to facilitate the adoption of the ASHRAE Standard 205P data exchange specification.
+A software toolkit to facilitate the adoption of the ASHRAE Standard 205 data exchange specification.
