--- a/data_viewer/test_schema_yaml.ipynb
+++ b/data_viewer/test_schema_yaml.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,19 +15,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['.\\\\RS0001.schema.yaml', '.\\\\RS0002.schema.yaml', '.\\\\RS0003.schema.yaml', '.\\\\RS0004.schema.yaml', '.\\\\RS0005.schema.yaml', '.\\\\RS0006.schema.yaml', '.\\\\RS0007.schema.yaml']\n"
+      "['..\\\\schema-205\\\\schema-source\\\\RS0001.schema.yaml', '..\\\\schema-205\\\\schema-source\\\\RS0002.schema.yaml', '..\\\\schema-205\\\\schema-source\\\\RS0003.schema.yaml', '..\\\\schema-205\\\\schema-source\\\\RS0004.schema.yaml', '..\\\\schema-205\\\\schema-source\\\\RS0005.schema.yaml', '..\\\\schema-205\\\\schema-source\\\\RS0006.schema.yaml', '..\\\\schema-205\\\\schema-source\\\\RS0007.schema.yaml']\n"
      ]
     }
    ],
    "source": [
-    "dir_path = r'.\\*.schema.yaml'\n",
+    "dir_path = r'..\\schema-205\\schema-source\\rs*.schema.yaml'\n",
     "files = glob.glob(dir_path)\n",
     "print(files)\n"
    ]
@@ -41,6 +41,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "RAE205\n",
       "RS0001\n",
       "RS0002\n",
       "RS0003\n",
@@ -64,16 +65,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['RS0001', 'RS0002', 'RS0003', 'RS0004', 'RS0005', 'RS0006', 'RS0007']"
+       "['RAE205',\n",
+       " 'RS0001',\n",
+       " 'RS0002',\n",
+       " 'RS0003',\n",
+       " 'RS0004',\n",
+       " 'RS0005',\n",
+       " 'RS0006',\n",
+       " 'RS0007']"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
